kc-service-greeter.yaml
apiVersion: v1
kind: Service
metadata:
  name: greeter
spec:
  type: ClusterIP
  selector:
    app: greeter
  ports:
  - name: http
    port: 8080
