kc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ssss
spec:
  type: ClusterIP
  selector:
    app: ssss
  ports:
  - name: http
    port: 8080
